# imn

./: README.md
lab1/: CMakeLists.txt  draw.m  main.cpp
lab10/: CMakeLists.txt  main.cpp  runprint.sh
lab10/draw/: output.gp
lab10/include/: struna.h
lab2/: CMakeLists.txt  compile.sh  main.cpp  wykresy.p
lab3/: buildrun.sh  main.cpp  wykresy.p
lab4/: main.cpp  runprint.sh  wykres.gp
lab4/include/: globalna.h  lokalna.h
lab4parallel/: CMakeLists.txt  main.cpp  readme.txt  runprint.sh
lab4parallel/include/: globalna.h  helper.h  lokalna.h
lab4parallel/wykresy/: parula.pal  rysowanie.gp
lab5/lab5/: CMakeLists.txt  main.cpp  runprint.sh
lab5/lab5/draw/: output.gp
lab5/lab5/include/: helper.h  siatka.h
lab6/: CMakeLists.txt  README.txt  main.cpp  runprint.sh
lab6/draw/: output.gp
lab6/include/: mgmres.h  solver.h
lab6/src/: mgmres.cpp  solver.cpp
lab7/: CMakeLists.txt  main.cpp  runprint.sh
lab7/include/: navstokes.hpp
lab7/output/: rysowanie.gp
lab7better/: cleanup.sh  navier.f90  runprint.sh  rysowanie.gp
lab8/: animacja.gp  dyfuzja.f90
lab8/output/: plot.gp
lab8cpp/: animacja.gp  main.cpp  runprint.sh  wykresy.gp
lab8cpp/include/: adwekcja.hpp
lab9/: CMakeLists.txt  main.cpp  runprint.sh
lab9/include/: metoda.h
lab9/output/: plot.sh
